--- a/src/app/pages/list-pokemons/list-pokemons.page.html
+++ b/src/app/pages/list-pokemons/list-pokemons.page.html
@@ -20,4 +20,10 @@
     </ion-row>
   </ion-grid>
 
+  <ion-infinite-scroll (ionInfinite)="morePokemon($event)">
+    <ion-infinite-scroll-content loadingSpinner="bubbles" loadingText="Cargando...">
+
+    </ion-infinite-scroll-content>
+  </ion-infinite-scroll>
+
 </ion-content>
