--- a/src/app/pages/detail-pokemon/detail-pokemon.page.html
+++ b/src/app/pages/detail-pokemon/detail-pokemon.page.html
@@ -1,13 +1,167 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>detail-pokemon</ion-title>
-  </ion-toolbar>
+
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">detail-pokemon</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-card *ngIf="pokemon">
+    <ion-card-header class="ion-text-center">
+      <ion-card-title class="ion-text-capitalize">{{pokemon.name}}</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      <ion-grid>
+        <ion-row>
+          <ion-col class="ion-text-center">
+            <ion-img [src]="pokemon.sprite"></ion-img>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col class="ion-text-center">
+            <ion-text>
+              <h2>Type:</h2>
+            </ion-text>
+          </ion-col>
+          <ion-col class="ion-text-center">
+            <ion-img class="ion-padding-start ion-padding-end" [src]="'assets/img/' + pokemon.type1 + '.gif'"></ion-img>
+          </ion-col>
+          <ion-col class="ion-text-center">
+            <ion-img class="ion-padding-start ion-padding-end" *ngIf="pokemon.type2"
+              [src]="'assets/img/' + pokemon.type2 + '.gif'"></ion-img>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col size="4" class="ion-text-center">
+            <ion-text>
+              Habilities:
+            </ion-text>  
+          </ion-col>
+          <ion-col size="8" class="ion-text-center">
+            <ion-text *ngFor="let ability of pokemon.abilities" class="ion-text-capitalize">
+              <h3>{{ability}}</h3>
+            </ion-text>
+          </ion-col>
+        </ion-row>
+
+        <ion-row *ngIf="pokemon.hiddenAbility">
+          <ion-col size="4" class="ion-text-center">
+            <ion-text>
+              Habilities hidden:
+            </ion-text>  
+          </ion-col>
+          <ion-col size="8" class="ion-text-center">
+            <ion-text class="ion-text-capitalize">
+              <h3>{{pokemon.hiddenAbility}}</h3>
+            </ion-text>
+          </ion-col>
+        </ion-row>
+
+        <ion-row>
+          <ion-col size="4" class="ion-text-center">
+            <ion-text>
+              Weight:
+            </ion-text>  
+          </ion-col>
+          <ion-col size="8" class="ion-text-center">
+            <ion-text>
+              <h3>{{pokemon.weight  + " kg"}}</h3>
+            </ion-text>
+          </ion-col>
+        </ion-row>
+
+        <ion-row>
+          <ion-col size="4" class="ion-text-center">
+            <ion-text>
+              Height:
+            </ion-text>  
+          </ion-col>
+          <ion-col size="8" class="ion-text-center">
+            <ion-text>
+              <h3>{{pokemon.height + " m"}}</h3>
+            </ion-text>
+          </ion-col>
+        </ion-row>
+
+        <ion-row>
+          <ion-col class="ion-text-center">
+            <ion-text>
+              Base stats
+            </ion-text>
+          </ion-col>
+        </ion-row>
+
+        <ion-row>
+          <ion-col class="ion-text-center">
+            <ion-text>PS</ion-text>  
+          </ion-col>
+          <ion-col class="ion-text-center">
+            <ion-text>
+              <h3>{{pokemon | getStat: 'hp'}}</h3>
+            </ion-text>
+          </ion-col>
+        </ion-row>
+
+        <ion-row>
+          <ion-col class="ion-text-center">
+            <ion-text>Attack</ion-text>  
+          </ion-col>
+          <ion-col class="ion-text-center">
+            <ion-text>
+              <h3>{{pokemon | getStat: 'attack'}}</h3>
+            </ion-text>
+          </ion-col>
+        </ion-row>
+
+        <ion-row>
+          <ion-col class="ion-text-center">
+            <ion-text>Defense</ion-text>  
+          </ion-col>
+          <ion-col class="ion-text-center">
+            <ion-text>
+              <h3>{{pokemon | getStat: 'defense'}}</h3>
+            </ion-text>
+          </ion-col>
+        </ion-row>
+
+        <ion-row>
+          <ion-col class="ion-text-center">
+            <ion-text>Special attack</ion-text>  
+          </ion-col>
+          <ion-col class="ion-text-center">
+            <ion-text>
+              <h3>{{pokemon | getStat: 'special-attack'}}</h3>
+            </ion-text>
+          </ion-col>
+        </ion-row>
+
+        <ion-row>
+          <ion-col class="ion-text-center">
+            <ion-text>Special defense</ion-text>  
+          </ion-col>
+          <ion-col class="ion-text-center">
+            <ion-text>
+              <h3>{{pokemon | getStat: 'special-defense'}}</h3>
+            </ion-text>
+          </ion-col>
+        </ion-row>
+
+        <ion-row>
+          <ion-col class="ion-text-center">
+            <ion-text>Speed</ion-text>  
+          </ion-col>
+          <ion-col class="ion-text-center">
+            <ion-text>
+              <h3>{{pokemon | getStat: 'speed'}}</h3>
+            </ion-text>
+          </ion-col>
+        </ion-row>
+
+      </ion-grid>
+    </ion-card-content>
+
+  </ion-card>
+
+  <ion-fab horizontal="end" vertical="bottom" slot="fixed">
+    <ion-fab-button (click)="goBack()">
+      <ion-icon name="close-outline"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
 </ion-content>
